# Finview

./: .dockerignore  .env copy  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  dockerfile  get_news.sh  import_yahoo_data.py  install.sh  launch.sh  main.py  pdf.py  portfolio_data.json  pyproject.toml  run.sh  simulation_portefeuille.xlsx  top_navigation_bar.py
.old/: interface_functions.py  models.py
.streamlit/: config.toml
data/: Bitcoin Historical Data.csv  fond_euro.xlsx  inflation.xlsx  livret a.xlsx  rendements_mensuels_indices.xlsx  tab_amort_credit_immo.xlsx
portfolio_package/: charts.py  create_demo_portfolio.py  interface_functions.py  models.py  patrimoine_prediction.py  pdf.py  portfolio_evolution.py  save_load_ptf_functions.py  top_navigation_bar.py  visualizations.py  wealth_management_functions.py  yahoo_search.py
saved_json_data/: portfolio_data.json
src/finview/: __init__.py  create_demo_portfolio.py  interface_functions.py  models.py  patrimoine_prediction.py  pdf.py  save_load_ptf_functions.py  visualizations.py  wealth_management_functions.py  yahoo_search.py
src/finview/charts/: __init__.py  analysis_charts.py  config.py  geo_charts.py  history.py  layouts.py  market_data.py  portfolio_charts.py
src/finview/fixture/: __init__.py  create_demo_portfolio.py
src/finview/market/: README.md  __init__.py  asset_display.py  asset_search.py  asset_ui.py  import_yfinance_db.py
src/finview/models/: __init__.py  credit.py  investments.py  portfolio.py
src/finview/news/: README.md  __init__.py  test_api.py  (+2 more)
(+29 files in other folders)
