[project]
name = "startup-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Colin",email = "leocolin7002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "fpdf (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "startup_dashboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
